# ChangeLog for dev-python/testresources
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/testresources/ChangeLog,v 1.13 2014/12/30 10:14:41 jer Exp $

  30 Dec 2014; Jeroen Roovers <jer@gentoo.org> testresources-0.2.7-r2.ebuild:
  Stable for HPPA (bug #530600).

  20 Aug 2014; Anthony G. Basile <blueness@gentoo.org>
  testresources-0.2.7-r1.ebuild, testresources-0.2.7-r2.ebuild,
  testresources-0.2.7.ebuild:
  Keyword ~ppc ~ppc64, bug #508282

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
  testresources-0.2.7-r1.ebuild, testresources-0.2.7-r2.ebuild,
  testresources-0.2.7.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  20 Jul 2014; Tobias Klausmann <klausman@gentoo.org>
  testresources-0.2.7-r2.ebuild:
  Keyworded on alpha, bug #508282

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> testresources-0.2.7-r1.ebuild,
  testresources-0.2.7-r2.ebuild, testresources-0.2.7.ebuild:
  Clean up obsolete dependencies on virtual/python-argparse and virtual/python-
  unittest2 (those packages were only required for <=python-2.6).

*testresources-0.2.7-r2 (12 Jun 2014)

  12 Jun 2014; Patrick Lauer <patrick@gentoo.org>
  +testresources-0.2.7-r2.ebuild:
  Add py34

  08 Jun 2014; Akinori Hattori <hattya@gentoo.org>
  testresources-0.2.7-r1.ebuild:
  keyword ~ia64 wrt bug #508282

  04 May 2014; Markus Meier <maekke@gentoo.org> testresources-0.2.7-r1.ebuild:
  add ~arm, bug #508282

  25 Apr 2014; Jeroen Roovers <jer@gentoo.org> testresources-0.2.7-r1.ebuild:
  Marked ~hppa (bug #508282).

  19 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org>
  testresources-0.2.7-r1.ebuild:
  Keyword ~amd64-linux ~x86-linux

*testresources-0.2.7-r1 (14 Jan 2014)

  14 Jan 2014; Ian Delaney <idella4@gentoo.org> +testresources-0.2.7-r1.ebuild,
  metadata.xml:
  metadata; add python herd, revbump; add py3.3 support

  13 Dec 2013; Ian Delaney <idella4@gentoo.org> metadata.xml,
  testresources-0.2.7.ebuild: