@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/testresources
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/testresources/ChangeLog,v 1.13 2014/12/30 10:14:41 jer Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/testresources/ChangeLog,v 1.14 2015/01/01 21:25:30 maekke Exp $
+
+  01 Jan 2015; Markus Meier <maekke@gentoo.org> testresources-0.2.7-r2.ebuild:
+  arm stable, bug #530600
 
   30 Dec 2014; Jeroen Roovers <jer@gentoo.org> testresources-0.2.7-r2.ebuild:
   Stable for HPPA (bug #530600).
